--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ const sortedPosts = allPosts
           </div>
           
           <div class="type-sample">
-            <code class="sample-code">npm install volks-typo</code>
+            <code class="sample-code">npm install Red-Pixel</code>
             <p class="type-meta">JetBrains Mono • Monospace Code</p>
           </div>
         </div>
@@ -147,8 +147,8 @@ const sortedPosts = allPosts
             <h3 class="step-number">01</h3>
             <div class="step-content">
               <h4 class="step-title">Clone Repository</h4>
-              <pre class="code-block"><code>git clone https://github.com/yourusername/volks-typo.git
-cd volks-typo</code></pre>
+              <pre class="code-block"><code>git clone https://github.com/yourusername/Red-Pixel.git
+cd Red-Pixel</code></pre>
             </div>
           </div>
           
